--- a/AsyncApi/AsyncApi/AsyncApi.csproj
+++ b/AsyncApi/AsyncApi/AsyncApi.csproj
@@ -3,12 +3,8 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
+<!--        <ServerGarbageCollection>true</ServerGarbageCollection>-->
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
 
 </Project>
