--- a/Threads/StartngThread/StartngThread.csproj
+++ b/Threads/StartngThread/StartngThread.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ThreadExtensions\ThreadExtensions.csproj" />
+      <ProjectReference Include="..\..\Helpers\Helpers.csproj" />
     </ItemGroup>
 
 </Project>
